# zoir

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  extension.toml
grammars/noir/: binding.gyp  grammar.js  package.json
grammars/noir/queries/: highlights.scm  injections.scm  locals.scm
grammars/noir/test/corpus/: comments.txt  enums.txt  expressions.txt  functions.txt  literals.txt  modules.txt  patterns.txt  statements.txt  structs.txt  traits.txt  types.txt  zk_specific.txt
languages/noir/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm  runnables.scm  textobjects.scm
src/: lib.rs
